Fixed overflow bugs on mobile view

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -93,6 +93,11 @@
         margin: 50px auto;
         width: 80%;
     }
+
+    .bd-long {
+        font-size: 22px;
+        font-size: 2.2rem;
+    }
 }
 
 @media (max-width: 420px) {
@@ -142,5 +147,9 @@
 
     .media-icon:hover {
         margin-left: 0;
+    }
+
+    .bd {
+        padding-left: 10px;
     }
 }
